--- a/meu desafio/index.html
+++ b/meu desafio/index.html
@@ -7,13 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
-        <div class="fundo">
-            <img src="../qr-code-component-main/images/image-qr-code.png" alt="erro">
-        
-        </div>
+   <main>
+    <div class="centro">
+       <img src="imagens/image-qr-code.png" alt="erro">
     </div>
+    <div class="text2">
+       <h1>Improve your front-end skills by building projects</h1>
+       <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p></div>
 
+   </main>
     
 </body>
 </html>
